load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api-v1_lib",
    srcs = ["app.go"],
    importpath = "github.com/Gogistics/prj-envoy-v4/services/api-v1",
    visibility = ["//visibility:private"],
    deps = [
        "//services/api-v1/routehandlers",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_binary(
    name = "api-v1",
    embed = [":api-v1_lib"],
    visibility = ["//visibility:public"],
)
